fixed navbar and footer layout issue in the rps page

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,6 +6,7 @@ footer {
     width: 100vw !important;
     bottom: 0 !important;
     font-weight: 600;
+    height: 200px;
   }
   
   .footer-container {
