--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -7,12 +7,14 @@
 .game {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: calc(100vh - 300px);
+  padding-top: 100px;
+  padding-bottom: 200px;
+  box-sizing: border-box;
 }
 
 .score {
   width: 300px;
-  position: fixed;
   display: flex;
   justify-content: space-evenly;
   place-self: center;
@@ -49,18 +51,20 @@
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   margin: 20px;
-  &:hover {
-    background-color: #95ec8d;
-    box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
-    transform: scale(1.1);
-    rotate: 10deg;
-    transition: all 0.2s ease-in-out;
-  }
-  &:hover img {
-    transform: scale(1.1);
-    rotate: -20deg;
-    transition: all 0.2s ease-in-out;
-  }
+}
+
+.button:hover {
+  background-color: #95ec8d;
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
+  transform: scale(1.1);
+  rotate: 10deg;
+  transition: all 0.2s ease-in-out;
+}
+
+.button:hover img {
+  transform: scale(1.1);
+  rotate: -20deg;
+  transition: all 0.2s ease-in-out;
 }
 
 .button img {
@@ -71,10 +75,11 @@
 }
 
 .hands {
+  flex-grow: 1;
   position: relative;
   display: flex;
-  height: 75vh;
   justify-content: space-between;
+  align-items: center;
 }
 
 .ai-hand {
@@ -111,16 +116,16 @@
   background-color: lightgray;
   padding: 8px 16px;
   transition: all 0.2s ease-in-out;
-  &:hover {
-    background-color: #95ec8d;
-    box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
-    transition: all 0.2s ease-in-out;
-  }
+}
+
+.result-buttons button:hover {
+  background-color: #95ec8d;
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
+  transition: all 0.2s ease-in-out;
 }
 
 @keyframes shake-ai {
-  0%,
-  100% {
+  0%, 100% {
     transform: translate(0, 0);
     rotate: 40deg;
   }
@@ -131,8 +136,7 @@
 }
 
 @keyframes shake-human {
-  0%,
-  100% {
+  0%, 100% {
     transform: translate(0, 0), scaleX(-1);
     rotate: -40deg;
   }
@@ -154,18 +158,15 @@
   .game {
     scale: 0.8;
   }
-
   .result-buttons {
     scale: 1.2;
   }
-
   .hands {
     position: relative;
     display: flex;
     justify-content: space-between;
     scale: 1.2;
   }
-
   .hands img {
     margin-top: 40%;
     width: 200px;
@@ -177,22 +178,18 @@
   .game {
     scale: 0.7;
   }
-
   .result-buttons {
     scale: 1.4;
   }
-
   .hands {
     position: relative;
     display: flex;
     justify-content: space-between;
     scale: 1.4;
   }
-
   .hands .ai-hand {
     margin-left: -2%;
   }
-
   .hands img {
     margin-top: 50%;
     width: 150px;
